--- a/Map/index.html
+++ b/Map/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -139,7 +139,7 @@
   </header>
   <div id="main-flex-container">
     <aside id="control-panel">
-      <button id="restorePanelBtn" title="Restore panel" aria-label="Restore panel" style="display:none;position:absolute;top:0.7em;left:0.7em;font-size:1.5em;z-index:10;background:none;border:none;cursor:pointer;">Â»</button>
+      <button id="restorePanelBtn" title="Restore panel" aria-label="Restore panel" style="display:none;position:absolute;top:0.7em;left:0.7em;font-size:1.5em;z-index:10;background:none;border:none;cursor:pointer;">&raquo;</button>
       <div style="display: flex; align-items: center; justify-content: space-between;">
         <h2 class="panel-title" tabindex="0">Map Controls</h2>
         <div style="display: flex; gap: 0.5em; align-items: center;">
@@ -223,7 +223,7 @@
       </div>
     </aside>
     <div id="panel-resizer" data-axis="x" role="separator" aria-orientation="vertical" aria-label="Resize map control panel" tabindex="0"></div>
-    <button id="showPanelBtn" title="Show panel" aria-label="Show panel" style="display:none;position:fixed;left:0;top:50%;transform:translateY(-50%);font-size:2.2em;z-index:3001;background:#015941;color:#fff;border:none;border-radius:0 1.2em 1.2em 0;padding:0.2em 0.5em;box-shadow:0 2px 8px rgba(0,0,0,0.12);cursor:pointer;">â†’</button>
+    <button id="showPanelBtn" title="Show panel" aria-label="Show panel" style="display:none;position:fixed;left:0;top:50%;transform:translateY(-50%);font-size:2.2em;z-index:3001;background:#015941;color:#fff;border:none;border-radius:0 1.2em 1.2em 0;padding:0.2em 0.5em;box-shadow:0 2px 8px rgba(0,0,0,0.12);cursor:pointer;">&rarr;</button>
     <main id="map-area">
       <div id="map"></div>
     </main>
