--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -36,7 +36,7 @@
   <section class="hero">
     <div class="hero-text">
       <h1>Project Gallery</h1>
-      <p>Step inside the story of the Rutgers Newark Bodega Project. This gallery captures the vibrant moments, hard work, and community spirit that drive our mission. From bustling bodegas to flourishing gardens, every image is a testament to collaboration, resilience, and hope. Explore the journey, celebrate the people, and witness the transformationâ€”one photo at a time.</p>
+      <p>Step inside the story of the Rutgers Newark Bodega Project. This gallery captures the vibrant moments, hard work, and community spirit that drive our mission. From bustling bodegas to flourishing gardens, every image is a testament to collaboration, resilience, and hope. Explore the journey, celebrate the people, and witness the transformation&mdash;one photo at a time.</p>
     </div>
   </section>
 
@@ -90,7 +90,7 @@
 
   <footer>
     <p>Contact: <a href="mailto:esanchez@bergen.edu">esanchez@bergen.edu</a></p>
-    <p>&copy; 2025 Rutgersâ€“Bergen Bodega Project</p>
+    <p>&copy; 2025 Rutgers&ndash;Bergen Bodega Project</p>
   </footer>
 
   <nav id="mobileNav" class="offcanvas" aria-label="Site">
