--- a/kpi-builder/index.html
+++ b/kpi-builder/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -319,7 +319,7 @@
   <section class="hero hero--kpi">
     <div class="hero-text">
       <h1>KPI Builder</h1>
-      <p>Interactively model supply-chain margins across rolesâ€”from farm to distributor to bodega.</p>
+      <p>Interactively model supply-chain margins across roles&mdash;from farm to distributor to bodega.</p>
     </div>
   </section>
 
@@ -364,23 +364,23 @@
                   <tr><td><strong>Produce</strong></td><td>The exact crop or item (acts as the unique key).</td></tr>
                   <tr><td><strong>Category</strong></td><td>Broad food group (<em>Fruit, Vegetable, Herb, etc.</em>) so the dashboard can apply group-level assumptions.</td></tr>
                   <tr><td><strong>Retail Price $/lb</strong></td><td>Shelf price shoppers pay per pound, taken from USDA-ERS national averages (editable).</td></tr>
-                  <tr><td><strong>Retail Margin %</strong></td><td>Retailerâ€™s target gross-profit percentage on that item (default â‰ˆ 37 %).</td></tr>
+                  <tr><td><strong>Retail Margin %</strong></td><td>Retailer's target gross-profit percentage on that item (default &asymp; 37 %).</td></tr>
                   <tr><td><strong>Retail Handling $/lb</strong></td><td>In-store labor, utilities, packaging, and other costs per pound (default $0.15 for fruit/veg, $0.50 for herbs).</td></tr>
-                  <tr><td><strong>Bodega Shrink %</strong></td><td>Percent of product lost inside the store to spoilage or theft; model subtracts this before profit calc (defaults â‰ˆ 11â€“12 %).</td></tr>
-                  <tr><td><strong>Farm Markup %</strong></td><td>Growerâ€™s desired markup added to production cost (default 15 %).</td></tr>
+                  <tr><td><strong>Bodega Shrink %</strong></td><td>Percent of product lost inside the store to spoilage or theft; model subtracts this before profit calc (defaults &asymp; 11&ndash;12 %).</td></tr>
+                  <tr><td><strong>Farm Markup %</strong></td><td>Grower's desired markup added to production cost (default 15 %).</td></tr>
                   <tr><td><strong>Farm Cost $/lb</strong></td><td>Estimated cost for the farm to grow, harvest, cool, and pack one retail-ready pound.</td></tr>
-                  <tr><td><strong>Farm Sale $/lb</strong></td><td>Actual price the farm receives: <code>Farm Cost Ã— (1 + Farm Markup %)</code>.</td></tr>
+                  <tr><td><strong>Farm Sale $/lb</strong></td><td>Actual price the farm receives: <code>Farm Cost &times; (1 + Farm Markup %)</code>.</td></tr>
                   <tr><td><strong>Farm Shrink %</strong></td><td>Post-harvest loss before the load leaves the farm (default 2 %).</td></tr>
                   <tr><td><strong>Dist. Handling $/lb</strong></td><td>Cooling, storage, trucking, and admin cost for the distributor (default $0.22 fruit, $0.20 veg, $1.00 herbs).</td></tr>
-                  <tr><td><strong>Dist. Margin %</strong></td><td>Distributorâ€™s target gross-profit percentage (default 12 %).</td></tr>
-                  <tr><td><strong>Dist. Sale $/lb</strong></td><td>Price charged by the distributor: <code>(Farm Sale + Dist. Handling) Ã— (1 + Dist. Margin %)</code>.</td></tr>
+                  <tr><td><strong>Dist. Margin %</strong></td><td>Distributor's target gross-profit percentage (default 12 %).</td></tr>
+                  <tr><td><strong>Dist. Sale $/lb</strong></td><td>Price charged by the distributor: <code>(Farm Sale + Dist. Handling) &times; (1 + Dist. Margin %)</code>.</td></tr>
                   <tr><td><strong>Dist. Shrink %</strong></td><td>Loss in the warehouse or during transit (default 4 %).</td></tr>
                   <tr><td><strong>Qty lbs</strong></td><td>Planned volume in pounds you expect to move for this item (user editable; powers the totals).</td></tr>
-                  <tr><td><strong>Farm Gross Profit $/lb</strong></td><td>Extra cents the farm keeps on each pound after costs: <code>Farm Sale âˆ’ Farm Cost</code> (read-only).</td></tr>
+                  <tr><td><strong>Farm Gross Profit $/lb</strong></td><td>Extra cents the farm keeps on each pound after costs: <code>Farm Sale &minus; Farm Cost</code> (read-only).</td></tr>
                   <tr><td><strong>Farm Gross Margin %</strong></td><td>Farm gross profit expressed as a percent of Farm Sale price.</td></tr>
-                  <tr><td><strong>Dist. Gross Profit $/lb</strong></td><td>Distributorâ€™s leftover cents per pound after paying the farm and its own handling cost.</td></tr>
+                  <tr><td><strong>Dist. Gross Profit $/lb</strong></td><td>Distributor's leftover cents per pound after paying the farm and its own handling cost.</td></tr>
                   <tr><td><strong>Dist. Gross Margin %</strong></td><td>Distributor gross profit as a percent of Dist. Sale price.</td></tr>
-                  <tr><td><strong>Bodega Gross Profit $/lb</strong></td><td>Storeâ€™s leftover cents per pound after paying the distributor, subtracting shrink, and covering retail handling costs.</td></tr>
+                  <tr><td><strong>Bodega Gross Profit $/lb</strong></td><td>Store's leftover cents per pound after paying the distributor, subtracting shrink, and covering retail handling costs.</td></tr>
                   <tr><td><strong>Bodega Gross Margin %</strong></td><td>That gross profit written as a percent of the shelf price.</td></tr>
                 </tbody>
               </table>
@@ -402,82 +402,82 @@
         <th>KPI</th>
         <th>Formula (column names)</th>
         <th>Why it matters &amp; how to read</th>
-        <th>If the number looks <strong>too low</strong> â€¦</th>
-        <th>If the number looks <strong>very high</strong> â€¦</th>
+        <th>If the number looks <strong>too low</strong> &hellip;</th>
+        <th>If the number looks <strong>very high</strong> &hellip;</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td><strong>Farm&nbsp;Gross&nbsp;Profit&nbsp;per&nbsp;Pound</strong></td>
-        <td><code>Farm Sale $/lb âˆ’ Farm Cost $/lb</code></td>
+        <td><code>Farm Sale $/lb &minus; Farm Cost $/lb</code></td>
         <td>How many cents the farm retains on each pound after all growing, harvesting, cooling, and packing costs.</td>
         <td>
           Raise sale price to distributor; trim production costs (inputs, labor, packaging); improve yield to spread fixed costs.
         </td>
-        <td>Consider reinvesting in quality upgrades or paying down debtâ€”avoid over-pricing the market.</td>
+        <td>Consider reinvesting in quality upgrades or paying down debt&mdash;avoid over-pricing the market.</td>
       </tr>
       <tr>
         <td><strong>Farm Gross Margin&nbsp;%</strong></td>
-        <td><code>(Farm GP $/lb Ã· Farm Sale $/lb) Ã— 100</code></td>
-        <td>Percentage profit. Many produce farms aim for <strong>15â€“25&nbsp;%</strong>.</td>
+        <td><code>(Farm GP $/lb &divide; Farm Sale $/lb) &times; 100</code></td>
+        <td>Percentage profit. Many produce farms aim for <strong>15&ndash;25&nbsp;%</strong>.</td>
         <td>Same levers as above; also verify markup&nbsp;% is realistic.</td>
         <td>If above 30&nbsp;% for a staple crop you may risk losing buyers.</td>
       </tr>
       <tr>
         <td><strong>Distributor Gross Profit&nbsp;per&nbsp;Pound</strong></td>
-        <td><code>Dist. Sale $/lb âˆ’ Farm Sale $/lb âˆ’ Dist. Handling $/lb</code></td>
-        <td>Left-over cents for wholesaler after paying the farm and covering cooling, storage, trucking, and labor (goal&nbsp;8â€“15 Â¢).</td>
+        <td><code>Dist. Sale $/lb &minus; Farm Sale $/lb &minus; Dist. Handling $/lb</code></td>
+        <td>Left-over cents for wholesaler after paying the farm and covering cooling, storage, trucking, and labor (goal&nbsp;8&ndash;15 &cent;).</td>
         <td>Negotiate lower farm price; raise distributor margin&nbsp;% ; cut fuel or warehouse costs.</td>
         <td>Use cushion to offer volume discounts or invest in better cold-chain equipment.</td>
       </tr>
       <tr>
         <td><strong>Distributor Gross Margin&nbsp;%</strong></td>
-        <td><code>(Dist. GP $/lb Ã· Dist. Sale $/lb) Ã— 100</code></td>
-        <td>Efficiency scoreâ€”most regional produce houses run <strong>10â€“15&nbsp;%</strong>.</td>
-        <td>Below 8&nbsp;%: route may be unprofitableâ€”revisit prices or drop slow items.</td>
+        <td><code>(Dist. GP $/lb &divide; Dist. Sale $/lb) &times; 100</code></td>
+        <td>Efficiency score&mdash;most regional produce houses run <strong>10&ndash;15&nbsp;%</strong>.</td>
+        <td>Below 8&nbsp;%: route may be unprofitable&mdash;revisit prices or drop slow items.</td>
         <td>Over 18&nbsp;% could trigger retailer push-back; consider strategic discounts.</td>
       </tr>
       <tr>
         <td><strong>Bodega Gross Profit&nbsp;per&nbsp;Pound</strong></td>
-        <td><code>(Retail Price $/lb Ã— (1 âˆ’ Bodega Shrink % /100)) âˆ’ Dist. Sale $/lb âˆ’ Retail Handling $/lb</code></td>
-        <td>Storeâ€™s cents after paying distributor, factoring spoilage/theft, and in-store handling. Target <strong>35â€“45 Â¢</strong>.</td>
+        <td><code>(Retail Price $/lb &times; (1 &minus; Bodega Shrink % /100)) &minus; Dist. Sale $/lb &minus; Retail Handling $/lb</code></td>
+        <td>Store's cents after paying distributor, factoring spoilage/theft, and in-store handling. Target <strong>35&ndash;45 &cent;</strong>.</td>
         <td>Raise shelf price; run promos to cut shrink; reduce handling costs.</td>
         <td>Leverage surplus for specials to draw traffic or upgrade displays.</td>
       </tr>
       <tr>
         <td><strong>Bodega Gross Margin&nbsp;%</strong></td>
-        <td><code>(Bodega GP $/lb Ã· Retail Price $/lb) Ã— 100</code></td>
+        <td><code>(Bodega GP $/lb &divide; Retail Price $/lb) &times; 100</code></td>
         <td>Percent margin. Supermarkets average ~<strong>37&nbsp;%</strong>.</td>
         <td>Below 25&nbsp;%: under-pricing or wasting too much.</td>
         <td>Above 45&nbsp;%: check competitiveness; shoppers may trade down.</td>
       </tr>
       <tr>
         <td><strong>Total Quantity&nbsp;(lbs)</strong></td>
-        <td>Î£ Quantity lbs for visible rows</td>
+        <td>&Sigma; Quantity lbs for visible rows</td>
         <td>Planned volume for selected crops.</td>
-        <td>â€”</td>
-        <td>â€”</td>
+        <td>&mdash;</td>
+        <td>&mdash;</td>
       </tr>
       <tr>
         <td><strong>Total Revenue&nbsp;($)</strong></td>
-        <td>If Farm â†’ Î£(Farm Sale $/lb Ã— Qty) <br>Distributor â†’ Î£(Dist. Sale $/lb Ã— Qty) <br>Bodega â†’ Î£(Retail Price $/lb Ã— (1 âˆ’ Shrink&nbsp;%) Ã— Qty)</td>
+        <td>If Farm &rarr; &Sigma;(Farm Sale $/lb &times; Qty) <br>Distributor &rarr; &Sigma;(Dist. Sale $/lb &times; Qty) <br>Bodega &rarr; &Sigma;(Retail Price $/lb &times; (1 &minus; Shrink&nbsp;%) &times; Qty)</td>
         <td>Top-line sales dollars for chosen role, adjusted for shrink when viewing as Bodega.</td>
         <td>Increase quantity, price, or both; trim shrink (retail role).</td>
         <td>Check capacity (acreage, truck or shelf space) to handle volume.</td>
       </tr>
       <tr>
         <td><strong>Total Gross Profit&nbsp;($)</strong></td>
-        <td>Role-specific GP per pound Ã— Qty, summed for visible rows</td>
+        <td>Role-specific GP per pound &times; Qty, summed for visible rows</td>
         <td>Absolute earnings for the batch.</td>
         <td>Adjust per-pound GP levers starting with highest-volume items.</td>
-        <td>Reinvest; ensure long-term demand isnâ€™t hurt.</td>
+        <td>Reinvest; ensure long-term demand isn't hurt.</td>
       </tr>
       <tr>
         <td><strong>Average Gross Margin&nbsp;%</strong></td>
-        <td>(Total Gross Profit Ã· Total Revenue) Ã— 100</td>
-        <td>Weighted margin across everything selectedâ€”big-picture health.</td>
+        <td>(Total Gross Profit &divide; Total Revenue) &times; 100</td>
+        <td>Weighted margin across everything selected&mdash;big-picture health.</td>
         <td>Below benchmark: focus on low-margin items or renegotiate large contracts.</td>
-        <td>Above benchmark: greatâ€”monitor competitor prices to stay sustainable.</td>
+        <td>Above benchmark: great&mdash;monitor competitor prices to stay sustainable.</td>
       </tr>
     </tbody>
   </table>
@@ -504,32 +504,32 @@
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td><strong>USDA ERS â€“ Fruit &amp; Vegetable Prices</strong> (interactive tables with national average retail prices per pound)</td>
+                    <td><strong>USDA ERS &ndash; Fruit &amp; Vegetable Prices</strong> (interactive tables with national average retail prices per pound)</td>
                     <td><a href="https://www.ers.usda.gov/data-products/fruit-and-vegetable-prices" target="_blank" rel="noopener">View</a></td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
-                    <td><strong>USDA ERS â€“ Price Spreads from Farm to Consumer</strong> (farm-share percentages for fresh fruits and vegetables)</td>
+                    <td><strong>USDA ERS &ndash; Price Spreads from Farm to Consumer</strong> (farm-share percentages for fresh fruits and vegetables)</td>
                     <td><a href="https://www.ers.usda.gov/data-products/price-spreads-from-farm-to-consumer" target="_blank" rel="noopener">View</a></td>
                   </tr>
                   <tr>
                     <th scope="row">3</th>
-                    <td><strong>USDA ERS â€“ Food Dollar Series, 2023 Chart of Note</strong> (wholesale-trade share = 11.4 Â¢ of the food dollar)</td>
+                    <td><strong>USDA ERS &ndash; Food Dollar Series, 2023 Chart of Note</strong> (wholesale-trade share = 11.4 &cent; of the food dollar)</td>
                     <td><a href="https://www.ers.usda.gov/data-products/charts-of-note/chart-detail?chartId=110567" target="_blank" rel="noopener">View</a></td>
                   </tr>
                   <tr>
                     <th scope="row">4</th>
-                    <td><strong>USDA ERS â€“ Chart of Note: Supermarket shrink varies by type of fresh fruit and vegetable</strong> (shrink averages = 12.6 % fruit / 11.6 % veg)</td>
+                    <td><strong>USDA ERS &ndash; Chart of Note: Supermarket shrink varies by type of fresh fruit and vegetable</strong> (shrink averages = 12.6 % fruit / 11.6 % veg)</td>
                     <td><a href="https://www.ers.usda.gov/data-products/charts-of-note/chart-detail?chartId=79033" target="_blank" rel="noopener">View</a></td>
                   </tr>
                   <tr>
                     <th scope="row">5</th>
-                    <td><strong>USDA ERS â€“ Updated Supermarket Shrink Estimates for Fresh Foods</strong> (full methodology PDF, EIB-155)</td>
+                    <td><strong>USDA ERS &ndash; Updated Supermarket Shrink Estimates for Fresh Foods</strong> (full methodology PDF, EIB-155)</td>
                     <td><a href="https://www.ers.usda.gov/sites/default/files/_laserfiche/publications/44100/EIB-155.pdf" target="_blank" rel="noopener">PDF</a></td>
                   </tr>
                   <tr>
                     <th scope="row">6</th>
-                    <td><strong>International Fresh Produce Association â€“ Supermarket Produce Department Benchmarks (2024)</strong> (reports 37 % average produce gross margin)</td>
+                    <td><strong>International Fresh Produce Association &ndash; Supermarket Produce Department Benchmarks (2024)</strong> (reports 37 % average produce gross margin)</td>
                     <td><a href="https://www.freshproduce.com/resources/retail/supermarket-produce-department-benchmarks/" target="_blank" rel="noopener">View</a></td>
                   </tr>
                 </tbody>
@@ -545,7 +545,7 @@
   <div class="offcanvas offcanvas-end" tabindex="-1" id="columnOptions">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title">Column Options</h5>
-      <button type="button" class="btn-close" id="closeCanvas" aria-label="Close">Ã—</button>
+      <button type="button" class="btn-close" id="closeCanvas" aria-label="Close">&times;</button>
     </div>
     <div class="offcanvas-body">
       <h6 class="mb-2">Column Visibility</h6>
