--- a/story/index.html
+++ b/story/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -44,8 +44,8 @@
         <img src="../images/images%202/Carousel/IMG_0007.JPG" alt="Seed planted" />
       </div>
       <div class="chapter-content">
-        <h2 class="chapter-title">Chapter 1 â€“ A Seed Is Planted</h2>
-        <p class="chapter-body">In late 2023, Dr. Kevin Lyons of Rutgers passes the torch to Dr. Edward Sanchez, challenging him to prototype a hyper-local food supply chain that links Newarkâ€™s community gardens to corner bodegas. âœ¦</p>
+        <h2 class="chapter-title">Chapter 1 &ndash; A Seed Is Planted</h2>
+        <p class="chapter-body">In late 2023, Dr. Kevin Lyons of Rutgers passes the torch to Dr. Edward Sanchez, challenging him to prototype a hyper-local food supply chain that links Newark's community gardens to corner bodegas. &#10022;</p>
       </div>
     </section>
     <section class="chapter" aria-label="Chapter 2">
@@ -54,8 +54,8 @@
         <img src="../images/images%202/Carousel/IMG_0011.JPG" alt="Core team building" />
       </div>
       <div class="chapter-content">
-        <h2 class="chapter-title">Chapter 2 â€“ Building the Core Team</h2>
-        <p class="chapter-body">Early 2024: Dr. Sanchez recruits Kevin Kim (3SP Club), who in turn connects with Jensy Jimenezâ€”fresh off his Title V Peer-Leader role and data-analytics bootcamp. Together, they outline needs for logistics, data wrangling, and community outreach. âœ¦</p>
+        <h2 class="chapter-title">Chapter 2 &ndash; Building the Core Team</h2>
+        <p class="chapter-body">Early 2024: Dr. Sanchez recruits Kevin Kim (3SP Club), who in turn connects with Jensy Jimenez&mdash;fresh off his Title V Peer-Leader role and data-analytics bootcamp. Together, they outline needs for logistics, data wrangling, and community outreach. &#10022;</p>
       </div>
     </section>
     <section class="chapter" aria-label="Chapter 3">
@@ -64,8 +64,8 @@
         <img src="../images/images%202/Carousel/IMG_0015.JPG" alt="Vision to pilot" />
       </div>
       <div class="chapter-content">
-        <h2 class="chapter-title">Chapter 3 â€“ From Vision to Pilot</h2>
-        <p class="chapter-body">Spring 2024 sees weekly white-board sessions where the trio map warehouse utilization KPIs, sketch cold-chain routes, and secure initial produce commitments from two urban gardens in the Ironbound. âœ¦</p>
+        <h2 class="chapter-title">Chapter 3 &ndash; From Vision to Pilot</h2>
+        <p class="chapter-body">Spring 2024 sees weekly white-board sessions where the trio map warehouse utilization KPIs, sketch cold-chain routes, and secure initial produce commitments from two urban gardens in the Ironbound. &#10022;</p>
       </div>
     </section>
     <section class="chapter" aria-label="Chapter 4">
@@ -74,8 +74,8 @@
         <img src="../images/images%202/Carousel/IMG_2061.JPG" alt="Flow-Chain cohort" />
       </div>
       <div class="chapter-content">
-        <h2 class="chapter-title">Chapter 4 â€“ The Flow-Chain Cohort</h2>
-        <p class="chapter-body">By Summer 2024 Estrella Luna, Shanandra Ubiera, Michael La Torre, Riley Oâ€™Sullivan, and Yulissa Aguila joinâ€”rounding out biology, communications, business ops, marketing, and full-stack skills. Team Flow Chain is born. âœ¦</p>
+        <h2 class="chapter-title">Chapter 4 &ndash; The Flow-Chain Cohort</h2>
+        <p class="chapter-body">By Summer 2024 Estrella Luna, Shanandra Ubiera, Michael La Torre, Riley O'Sullivan, and Yulissa Aguila join&mdash;rounding out biology, communications, business ops, marketing, and full-stack skills. Team Flow Chain is born. &#10022;</p>
       </div>
     </section>
     <section class="chapter" aria-label="Chapter 5">
@@ -84,8 +84,8 @@
         <img src="../images/images%202/Carousel/IMG_2064.JPG" alt="Looking ahead" />
       </div>
       <div class="chapter-content">
-        <h2 class="chapter-title">Chapter 5 â€“ Looking Ahead</h2>
-        <p class="chapter-body">Nothing here is finishedâ€”yet. The next milestones: integrate IoT temp loggers, publish our open-source dashboard, and onboard ten bodegas by Summer 2026. The seedling has sprouted; now we cultivate. âœ¦</p>
+        <h2 class="chapter-title">Chapter 5 &ndash; Looking Ahead</h2>
+        <p class="chapter-body">Nothing here is finished&mdash;yet. The next milestones: integrate IoT temp loggers, publish our open-source dashboard, and onboard ten bodegas by Summer 2026. The seedling has sprouted; now we cultivate. &#10022;</p>
       </div>
     </section>
   </main>
